--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
   </head>
   <body>
                 <img src="https://scontent.fkiv1-1.fna.fbcdn.net/v/t1.6435-1/p240x240/164832290_506891604029582_1168014674587372_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=7206a8&_nc_ohc=C88_DUFZZBIAX_VUmTg&_nc_ht=scontent.fkiv1-1.fna&tp=6&oh=51e5e9c11b40f60ee387f7941f0f5474&oe=60890E2F" alt="">
-    <h1> Вписать заголовок </h1>
-        <h2> text h2 заголовок </h2>
-        <p> просто текст </p>
+    <h1> Televiziunea Ta </h1>
+        <h2> Prima televiziune regională din RM. Dufuzare în toată țara - prin IPTV și Stații proprii. </h2>
+        <p> ELITA TV - prima televiziune regională din Republica Moldova. </p>
+        <p> Produce și difuzează programe TV. </p>
+        <p> Emite în toată țara prin IPTV și Stații proprii, </p>
+        <p> în șase orașe și peste 250 de sate de pe ambele maluri ale Nistrului. </p>
+        <p> Programele ELITA TV sunt apreciate de organizații și experți naționali și internaționali. </p>
+        <p> Emisiunile ELITA TV au fost premiate de programul UNDP, </p>
+        <p> ONU, Festivalul de film documentar CRONOGRAF, </p>
+        <p> Asociația Telejurnaliștilor Independenți, Centrul de Investigații Jurnalistice, </p>
+        <p> Fundația Friedrich Ebert FES și alte organizații de profesioniști. </p>
         <p><b>  Жирный текст </<b></p>
           <a href="https://www.youtube.com/watch?v=y8LYYTs5m5w&list=PLbZD9IqguShotdAR4l72cPyeicdohjfmH">
             Fiți la curent
